--- a/web/styles.css
+++ b/web/styles.css
@@ -1,21 +1,22 @@
 body {
     font-family: Arial, sans-serif;
-    color:#178582;
+    color:#393939;
     margin: 20px;
     padding: 0;
-    background-color: #0A1828;
+    background-color: #ffffff;
 }
 
 h1, h2 {
     text-align: center;
     padding: 10px;
+    color: #de0000;
 }
 
 form {
     max-width: 1200px;
     margin: 0 auto;
     padding: 30px;
-    background: #deb386;
+    background: #cacaca;
     border-radius: 20px;
     box-shadow: 0 0 10px #0000001a;
     display: flex;
@@ -54,14 +55,14 @@ button {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: #6aeeff;
+    background-color: #ff1d1d;
     color: white;
     cursor: pointer;
     border: none;
 }
 
 button:hover {
-    background-color: #88bdf5;
+    background-color: #ff8686;
 }
 
 .quality-filter{
@@ -108,4 +109,32 @@ button:hover {
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
+}
+
+
+.quality-container {
+    position: relative;
+    width: 100px;
+    height: 50px;
+    margin: 20px auto 30px auto;
+    text-align: center;
+}
+
+.quality-meter {
+    width: 100px;
+    height: 50px;
+}
+
+.quality-meter path {
+    stroke-linecap: round;
+    transition: stroke-dashoffset 0.8s ease-in-out;
+}
+
+.quality-text {
+    position: absolute;
+    width: 100%;
+    top: 40px;
+    left: 0;
+    font-weight: bold;
+    color: #28a745;
 }
