--- a/web/templates/translators_avail.html
+++ b/web/templates/translators_avail.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translators Available</title>
-    <link rel="stylesheet" href="styles_trans.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles_trans.css') }}">
+
 </head>
 <body>
     <form id="formulario">
@@ -72,7 +73,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 
 </body>
 </html>
