--- a/web/templates/forms.html
+++ b/web/templates/forms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TranslAItion</title>
-    <link rel="stylesheet" href="styles_form.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles_form.css') }}">
 
 </head>
 <body>
@@ -21,36 +21,39 @@
             <option value="">Industry</option>
         </select>
 
-        <select id="industry-group" name="industry-group">
+        <select id="industry-group" name="industry_group">
             <option value="">Industry Group</option>
+            <option value="tech">Technology</option>
+            <option value="finance">Finance</option>
         </select>
 
-        <select id="sub-industry" name="sub-industry">
+        <select id="sub-industry" name="sub_industry">
             <option value="">Sub Industry</option>
         </select>
 
-        <select id="task-type" name="task-type">
+        <select id="task-type" name="task_type">
             <option value="">Task Type</option>
         </select>
 
-        <input type="text" id="original-language" placeholder="Original Language" name="original-language" >
+        <input type="text" id="original-language" placeholder="Original Language" name="original_language" >
 
-        <input type="text" id="target-language" placeholder="Target Language" name="target-language" >
+        <input type="text" id="target-language" placeholder="Target Language" name="target_language" >
 
         <input type="number" min="0" id="budget" placeholder="Budget" name="budget" >
 
-        <input type="text" id="project-id" placeholder="Project ID" name="project-id" >
+        <input type="text" id="project-id" placeholder="Project ID" name="project_id" >
 
 
         <select id="pm" name="pm">
             <option value="">PM</option>
         </select>
 
+        <button type="submit" id="search-translators">Search Translators</button>
     </form>
 
-    <button type="submit" id="search-translators">Search Translators</button>
+    
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
     
 
 </body>
