--- a/web/templates/translators_avail.html
+++ b/web/templates/translators_avail.html
@@ -9,41 +9,70 @@
 </head>
 <body>
     <form id="formulario">
-        <input type="text" id="manufacturer" placeholder="Manufacturer" name="manufacturer" >
+        <select id="manufacturer" name="manufacturer">
+            <option value="">Manufacturer</option>
+            <option value="MetaPro">MetaPro</option>
+            <option value="SunTech">SunTech</option>
+            <option value="NexisOne">NexisOne</option>
+            <option value="Global Trading Solutions">Global Trading Solutions</option>
+        </select>
         
 
         <select id="sector" name="sector">
-            <option value="">Sector</option>
+            <option value="">Select Sector</option>
+            <option value="Information Technology">Information Technology</option>
+            <option value="Industrials">Industrials</option>
+            <option value="Communication Services">Communication Services</option>
+            <option value="Health Care">Health Care</option>
+            <option value="Consumer Discretionary">Consumer Discretionary</option>
         </select>
 
         <select id="industry" name="industry">
-            <option value="">Industry</option>
+            <option value="">Select Industry</option>
+            <option value="Electrical Components & Equipment">Electrical Components & Equipment</option>
+            <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
+            <option value="Trading Companies & Distributors">Trading Companies & Distributors</option>
         </select>
 
-        <select id="industry-group" name="industry-group">
-            <option value="">Industry Group</option>
+        <select id="industry-group" name="industry_group">
+            <option value="">Select Industry Group</option>
+            <option value="Technology Hardware & Equipment">Technology Hardware & Equipment</option>
+            <option value="Software & Services">Software & Services</option>
+            <option value="Health Care Providers">Health Care Providers</option>
         </select>
 
-        <select id="sub-industry" name="sub-industry">
-            <option value="">Sub Industry</option>
+        <select id="sub-industry" name="sub_industry">
+            <option value="">Select Sub Industry</option>
+            <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
+            <option value="Communications Equipment">Communications Equipment</option>
+            <option value="Systems Software">Systems Software</option>
         </select>
 
-        <input type="text" id="original-language" placeholder="Original Language" name="original-language" >
-
-        <input type="text" id="target-language" placeholder="Target Language" name="target-language" >
-
-        <input type="number" id="budget" placeholder="Budget" name="budget" >
-
-        <input type="text" id="project-id" placeholder="Project ID" name="project-id" >
-
-        <select id="task-type" name="task-type">
+        <select id="task-type" name="task_type">
             <option value="">Task Type</option>
+            <option value="ProofReading">ProofReading</option>
+            <option value="Translation">Translation</option>
         </select>
+
+        <input type="text" id="original-language" placeholder="Original Language" name="original_language" >
+
+        <input type="text" id="target-language" placeholder="Target Language" name="target_language" >
+
+        <input type="number" min="0" id="budget" placeholder="Budget" name="budget" >
+
+        <input type="text" id="project-id" placeholder="Project ID" name="project_id" >
+
+        <input type="date" id="finish-date" name="finish_date" placeholder="Finish Date">
+
 
         <select id="pm" name="pm">
-            <option value="">PM</option>
+            <option value="">Select PM</option>
+            <option value="BMT">BMT</option>
+            <option value="RMT">RMT</option>
+            <option value="PMT">PMT</option>
         </select>
 
+        <button type="submit" id="search-translators">Search Translators</button>
     </form>
     
     <!--<button type="submit" id="search-translators">Search Translators</button>-->
