--- a/web/templates/translators_avail.html
+++ b/web/templates/translators_avail.html
@@ -9,63 +9,30 @@
 </head>
 <body>
     <form id="formulario">
-        <select id="manufacturer" name="manufacturer">
-            <option value="">Manufacturer</option>
-            <option value="MetaPro">MetaPro</option>
-            <option value="SunTech">SunTech</option>
-            <option value="NexisOne">NexisOne</option>
-            <option value="Global Trading Solutions">Global Trading Solutions</option>
-        </select>
-        
 
-        <select id="sector" name="sector">
-            <option value="">Select Sector</option>
-            <option value="Information Technology">Information Technology</option>
-            <option value="Industrials">Industrials</option>
-            <option value="Communication Services">Communication Services</option>
-            <option value="Health Care">Health Care</option>
-            <option value="Consumer Discretionary">Consumer Discretionary</option>
-        </select>
 
-        <select id="industry" name="industry">
+        <select id="industry" name="industry" required>
             <option value="">Select Industry</option>
             <option value="Electrical Components & Equipment">Electrical Components & Equipment</option>
             <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
             <option value="Trading Companies & Distributors">Trading Companies & Distributors</option>
         </select>
 
-        <select id="industry-group" name="industry_group">
-            <option value="">Select Industry Group</option>
-            <option value="Technology Hardware & Equipment">Technology Hardware & Equipment</option>
-            <option value="Software & Services">Software & Services</option>
-            <option value="Health Care Providers">Health Care Providers</option>
-        </select>
-
-        <select id="sub-industry" name="sub_industry">
-            <option value="">Select Sub Industry</option>
-            <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
-            <option value="Communications Equipment">Communications Equipment</option>
-            <option value="Systems Software">Systems Software</option>
-        </select>
-
-        <select id="task-type" name="task_type">
+        <select id="task-type" name="task_type" required>
             <option value="">Task Type</option>
             <option value="ProofReading">ProofReading</option>
             <option value="Translation">Translation</option>
         </select>
 
-        <input type="text" id="original-language" placeholder="Original Language" name="original_language" >
+        <input type="text" id="source-language" placeholder="Original Language" name="source_language" required>
 
-        <input type="text" id="target-language" placeholder="Target Language" name="target_language" >
+        <input type="text" id="target-language" placeholder="Target Language" name="target_language" required>
 
-        <input type="number" min="0" id="budget" placeholder="Budget" name="budget" >
+        <input type="number" id="forecast" placeholder="Forecast" name="forecast" required>
 
-        <input type="text" id="project-id" placeholder="Project ID" name="project_id" >
+        <input type="number" id="hourly_rate" placeholder="Hourly Rate" name="hourly_rate" required>
 
-        <input type="date" id="finish-date" name="finish_date" placeholder="Finish Date">
-
-
-        <select id="pm" name="pm">
+        <select id="pm" name="pm" required>
             <option value="">Select PM</option>
             <option value="BMT">BMT</option>
             <option value="RMT">RMT</option>
