--- a/web/templates/forms.html
+++ b/web/templates/forms.html
@@ -17,6 +17,9 @@
             <option value="Electrical Components & Equipment">Electrical Components & Equipment</option>
             <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
             <option value="Trading Companies & Distributors">Trading Companies & Distributors</option>
+            <option value="Industrial Machinery">Industrial Machinery</option>
+            <option value="Health Care Facilities">Health Care Facilities</option>
+            <option value="Application Software">Application Software</option>
         </select>
 
         <select id="task-type" name="task_type" required>
