--- a/web/templates/translators_avail.html
+++ b/web/templates/translators_avail.html
@@ -16,6 +16,9 @@
             <option value="Electrical Components & Equipment">Electrical Components & Equipment</option>
             <option value="Technology Hardware, Storage & Peripherals">Technology Hardware, Storage & Peripherals</option>
             <option value="Trading Companies & Distributors">Trading Companies & Distributors</option>
+            <option value="Industrial Machinery">Industrial Machinery</option>
+            <option value="Health Care Facilities">Health Care Facilities</option>
+            <option value="Application Software">Application Software</option>
         </select>
 
         <select id="task-type" name="task_type" required>
@@ -30,7 +33,7 @@
 
         <input type="number" id="forecast" placeholder="Forecast" name="forecast" required>
 
-        <input type="number" id="hourly_rate" placeholder="Hourly Rate" name="hourly_rate" required>
+        <input type="number" id="hourly_rate" placeholder="Avg Hourly Rate" name="hourly_rate" required>
 
         <select id="pm" name="pm" required>
             <option value="">Select PM</option>
